<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/ten_10dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_e5"
            android:layout_margin="@dimen/ten_10dp"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_20dp"
                android:gravity="center"
                android:paddingLeft="@dimen/twenty_20dp"
                android:paddingRight="@dimen/twenty_20dp"
                android:text="@string/alert_box"
                style="@style/text_16px_black_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titletext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_20dp"
                android:paddingLeft="@dimen/twenty_20dp"
                android:paddingRight="@dimen/twenty_20dp"
                style="@style/text_16px_black_reg"
                tools:text="@string/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/firstButton"
                android:textAllCaps="false"
                android:paddingLeft="@dimen/ten_10dp"
                android:paddingRight="@dimen/ten_10dp"
                android:layout_width="0dp"
                android:background="@color/black"
                tools:text="@string/delete_button"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_20dp"
                android:layout_marginBottom="@dimen/twenty_20dp"
                android:layout_marginLeft="@dimen/ten_10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/secondButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titletext" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/secondButton"
                android:paddingLeft="@dimen/ten_10dp"
                android:paddingRight="@dimen/ten_10dp"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/twenty_20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_20dp"
                android:layout_marginBottom="@dimen/twenty_20dp"
                tools:text="@string/update_button"
                android:background="@color/black"
                android:textColor="@android:color/white"
                android:layout_marginRight="@dimen/twenty_20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/firstButton"
                app:layout_constraintTop_toBottomOf="@+id/titletext" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>